[package]
name = "wasm-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version =  "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.61"
features = [
    # Some APIs are unstable and requires. Add 'RUSTFLAGS=--cfg=web_sys_unstable_apis' to env val
    "console",
    "CanvasRenderingContext2d",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "HtmlVideoElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamConstraints",
    "Navigator",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderConfig",
    "VideoEncoderInit",
    "VideoFrame",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
]

#[patch.crates-io]
#web-sys = { path = "../wasm-bindgen/crates/web-sys" }
#js-sys = { path = "../wasm-bindgen/crates/js-sys" }
#wasm-bindgen = { path = "../wasm-bindgen/" }
#wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }